--- a/application.css
+++ b/application.css
@@ -114,7 +114,7 @@ a {
 }
 
 header {
-  margin-bottom: 2.5rem;
+  margin-bottom: 1.5rem;
   position: relative;
 }
 
@@ -163,7 +163,9 @@ section > h1 {
   border-bottom: 3px solid #3f0e95;
   color: #3f0e95;
   font-size: 2.2rem;
-  padding-bottom: 0.7rem;
+  margin-bottom: 0.7rem;
+  margin-top: 2.5rem;
+  padding-bottom: 0.8rem;
 }
 
 .life-philosophy p {
@@ -172,4 +174,9 @@ section > h1 {
   font-style: italic;
   color: #3f0e95;
   line-height: 110%;
+  margin-top: 1.1rem;
+}
+
+.bio p {
+  margin: 1rem 0;
 }
