--- a/application.css
+++ b/application.css
@@ -46,6 +46,14 @@ a:hover, a:active {
   width: 2.1rem;
 }
 
+.fa-circle:before {
+  content: "\f111";
+}
+
+.fa-circle-o:before {
+  content: "\f10c";
+}
+
 .fa-envelope-o:before {
   content: "\f003";
 }
@@ -164,7 +172,7 @@ section > h1 {
   color: #3f0e95;
   font-size: 2.2rem;
   margin-bottom: 0.7rem;
-  margin-top: 2.5rem;
+  margin-top: 3.5rem;
   padding-bottom: 0.8rem;
 }
 
@@ -179,4 +187,35 @@ section > h1 {
 
 .bio p {
   margin: 1rem 0;
+}
+
+.languages ul {
+  margin-top: 0;
+}
+
+.languages li {
+  border-bottom: 1px dotted #3f0e95;
+  display: flex;
+  font-size: 105%;
+  font-weight: bold;
+  list-style: none;
+  padding: 0.8rem 0;
+}
+
+.languages li:last-child {
+  border-bottom: none;
+}
+
+.languages .language {
+  margin: 0;
+  width: 30%;
+}
+
+.languages .rating {
+  text-align: right;
+  width: 70%;
+}
+
+.languages .fa {
+  color: #3f0e95;
 }
