Tweak styling of 'Education' section

--- a/application.css
+++ b/application.css
@@ -235,12 +235,12 @@ section > h1 {
 }
 
 .education-experience {
-  margin: 0;
+  margin: -0.8rem 0 0;
 }
 
 .education-experience li {
   border-bottom: 1px dotted #3f0e95;
-  padding: 1.3rem 0;
+  padding: 1.8rem 0;
 }
 
 .education-experience li:last-child {
