--- a/application.css
+++ b/application.css
@@ -126,7 +126,7 @@ a {
 }
 
 .content {
-  background: url("images/ruby-logo.png?version=1") 53% 11% no-repeat, url("images/rails-logo.png?version=1") 54% 51% no-repeat;
+  background: url("images/ruby-logo.png?version=1") 53% 15rem no-repeat, url("images/rails-logo.png?version=1") 53% 54rem no-repeat;
   display: flex;
 }
 
