--- a/application.css
+++ b/application.css
@@ -240,8 +240,9 @@ section > h1 {
   border: 1px solid #3f0e95;
   border-radius: 6px;
   display: inline-block;
-  padding: 0.3rem 0.5rem;
+  padding: 0.3rem 0.6rem;
   margin-bottom: 0.5rem;
+  margin-right: 0.3rem;
 }
 
 .education-experience {
