--- a/application.css
+++ b/application.css
@@ -200,11 +200,12 @@ h3 {
 
 .life-philosophy p {
   font-family: 'Kalam', 'Times New Roman', 'Times', serif, cursive;
-  font-size: 1.6rem;
+  font-size: 1.8rem;
   font-style: italic;
   color: #3f0e95;
   line-height: 110%;
   margin-top: 1.1rem;
+  font-weight: 300;
 }
 
 .bio p {
