--- a/application.css
+++ b/application.css
@@ -1,4 +1,4 @@
-/* reset common stuff first */
+/* reset common styles first */
 
 * {
   box-sizing: border-box;
@@ -10,6 +10,7 @@ html, body, fieldset, form, div {
 }
 
 address, blockquote, dl, h1, h2, h3, h4, h5, h6, ol, p, pre, ul {
+  line-height: 130%;
   margin: 1.5rem 0;
   padding: 0;
 }
@@ -98,102 +99,109 @@ li {
 body {
   background: black;
   color: white;
+  padding: 4rem;
 }
 
 a {
   color: rgba(8, 67, 247, 0.69);
 }
 
-.container {
-  background: url("images/paper.jpg");
-  background-color: white;
-  color: black;
-  margin: 4rem auto;
-  min-height: 60rem;
-  padding: 6rem 4rem;
-  width: 70rem;
-}
-
-.stripe {
-  background: url("images/stripe.png");
-  background-repeat: repeat-x;
-  background-size: 91px 6px;
-  height: 6px;
-  margin: -5.6rem -4rem 5rem;
-}
-
-.stripe-bottom {
-  margin-bottom: -5.6rem;
-  margin-top: 4rem;
-}
-
-.content {
-  background: url("images/ruby-logo.png") 53% 15rem no-repeat, url("images/rails-logo.png") 53% 54rem no-repeat;
-  display: flex;
-}
-
-.column-left {
-  margin-right: 4rem;
-  width: 60%;
-}
-
-.column-right {
-  width: 40%;
-}
-
-.intro {
-  margin-bottom: 0.3rem;
-  position: relative;
-}
-
 h1 {
   font-size: 3.57rem;
-  margin-top: 0;
+  margin: 0;
 }
 
 h2 {
   color: #3f0e95;
-  margin-top: 2rem;
-}
-
-.contact {
-  display: flex;
-  width: 60%;
-}
-
-.contact .column-left {
-  margin-right: 0;
-  width: 50%;
-}
-
-.contact .column-right {
-  width: 50%;
-}
-
-.contact ul {
   margin: 0;
-}
-
-.contact li {
-  margin: 0.6rem 0;
-}
-
-.avatar {
-  border-radius: 50%;
-  box-shadow: 0 0 0 5px #fff, 0 0 0 6px #ccc;
-  position: absolute;
-  right: 5rem;
-  top: -2rem;
-  width: 14rem;
 }
 
 h3 {
   border-bottom: 3px solid #3f0e95;
   color: #3f0e95;
   font-size: 1.5rem;
-  margin-bottom: 0.7rem;
+  margin-bottom: 0.4rem;
   margin-top: 2.5rem;
-  padding-bottom: 0.8rem;
+  padding-bottom: 0.2rem;
+}
+
+h4 {
+  font-size: 1.35rem;
+  font-weight: 400;
+  margin: 0;
+}
+
+h5 {
+  color: #3f0e95;
+  font-size: 1.1rem;
+  margin: 0.1rem 0 0;
+}
+
+.container {
+  background-color: white;
+  background-image: url("images/paper.jpg");
+  color: black;
+  margin: 0 auto;
+  max-width: 70rem;
+  padding: 0.4rem 0;
+}
+
+.stripe {
+  background-image: url("images/stripe.png");
+  background-repeat: repeat-x;
+  background-size: 91px 6px;
+  height: 6px;
+}
+
+header {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 3.5rem 4rem 0;
+}
+
+main {
+  background: url("images/ruby-logo.png") 53% 15rem no-repeat, url("images/rails-logo.png") 53% 54rem no-repeat;
+  display: grid;
+  grid-gap: 3rem;
+  grid-template-columns: 4fr 3fr;
+  padding: 0 4rem 3.5rem;
+}
+
+.intro, .avatar {
+  flex: 1 1 auto;
+}
+
+.intro {
+  width: 65%;
+}
+
+.contact {
+  display: flex;
+  flex-wrap: wrap;
+  margin: 1.3rem 0;
+}
+
+.avatar {
+  text-align: center;
+  width: 35%;
+}
+
+.avatar img {
+  border-radius: 50%;
+  box-shadow: 0 0 0 5px #fff, 0 0 0 6px #ccc;
+  margin: 0 0.5rem;
+  max-width: 100%;
+  width: 14rem;
+}
+
+.contact ul {
+  margin: 0;
+  min-width: 240px;
+  width: 50%;
+}
+
+.contact li {
+  margin: 0.6rem 0;
 }
 
 .life-philosophy p {
@@ -278,31 +286,20 @@ h3 {
   border-bottom: none;
 }
 
-.education-experience h4 {
-  font-size: 1.35rem;
-  font-weight: 400;
-  margin: 0;
-}
-
-.education-experience h5 {
-  color: #3f0e95;
-  font-size: 1.1rem;
-  margin: 0.7rem 0 0;
-}
-
-.education-experience .period-place {
+.period-place {
   display: flex;
+  flex-wrap: wrap;
 }
 
-.education-experience .period, .education-experience .place {
+.period, .place {
   margin: 0.6rem 0 0;
 }
 
-.education-experience .period {
+.period {
   width: 55%;
 }
 
-.education-experience .place {
+.place {
   width: 45%;
 }
 
@@ -311,7 +308,7 @@ h3 {
   margin-right: 0.3rem;
 }
 
-.education-experience .period span, .education-experience .place span {
+.period span, .place span {
   font-size: 90%;
 }
 
@@ -342,4 +339,75 @@ h3 {
 
 .experience-details .period {
   color: #ccc;
+}
+
+/* Responsiveness */
+
+@media (max-width: 1250px) {
+  body {
+    padding: 2rem;
+  }
+
+  header {
+    padding: 2.5rem 3rem 0;
+  }
+
+  main {
+    padding: 0 3rem 2.5rem;
+  }
+}
+
+@media (max-width: 900px) {
+  h1 {
+    font-size: 2.7rem;
+  }
+
+  h2 {
+    font-size: 1.4rem;
+  }
+
+  .avatar {
+    margin-top: 0.3rem;
+  }
+
+  main {
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  .experience, aside {
+    width: 100%;
+  }
+}
+
+@media (max-width: 700px) {
+  header {
+    padding: 2rem 1.5rem 0;
+  }
+
+  main {
+    padding: 0 1.5rem 1rem;
+  }
+
+  h1, h2 {
+    text-align: center;
+  }
+
+  .intro, .avatar {
+    width: 100%;
+  }
+
+  .period, .place {
+    width: 100%;
+  }
+}
+
+@media (max-width: 500px) {
+  h1 {
+    font-size: 2.2rem;
+  }
+
+  h2 {
+    font-size: 1.2rem;
+  }
 }
