Add styling for a:hover, a:focus

--- a/application.css
+++ b/application.css
@@ -106,6 +106,10 @@ a {
   color: rgba(8, 67, 247, 0.69);
 }
 
+a:focus, a:hover {
+  color: rgb(170, 105, 255);
+}
+
 h1 {
   font-size: 3.57rem;
   margin: 0;
