Tweak padding on smaller screen sizes

--- a/application.css
+++ b/application.css
@@ -385,6 +385,10 @@ main {
 }
 
 @media (max-width: 700px) {
+  body {
+    padding: 1.5rem;
+  }
+
   header {
     padding: 2rem 1.5rem 0;
   }
@@ -407,6 +411,18 @@ main {
 }
 
 @media (max-width: 500px) {
+  body {
+    padding: 1rem;
+  }
+
+  header {
+    padding: 1.5rem 1.1rem 0;
+  }
+
+  main {
+    padding: 0 1.1rem;
+  }
+
   h1 {
     font-size: 2.2rem;
   }
